--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,6 +1,7 @@
 name: Publish
 
 on:
+  pull_request:
   push:
     branches:
       - main
@@ -12,7 +13,6 @@ env:
 jobs:
   build:
     name: Build & Publish
-    if: github.repository == 'bluesky-social/atproto'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -28,6 +28,7 @@ jobs:
       - run: pnpm build
       - run: pnpm verify
       - name: Publish
+        if: github.ref == 'refs/heads/main'
         id: changesets
         uses: changesets/action@v1
         with:
