--- a/packages/ozone/package.json
+++ b/packages/ozone/package.json
@@ -52,7 +52,7 @@
   },
   "devDependencies": {
     "@atproto/lex-cli": "workspace:^",
-    "@atproto/pds": "workspace:^",
+    "@fusectore/atproto-pds": "workspace:^",
     "@did-plc/server": "^0.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
