--- a/packages/pds/package.json
+++ b/packages/pds/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@atproto/pds",
+  "name": "@fusectore/atproto-pds",
   "version": "0.4.84",
   "license": "MIT",
   "description": "Reference implementation of atproto Personal Data Server (PDS)",
