--- a/services/pds/package.json
+++ b/services/pds/package.json
@@ -6,8 +6,6 @@
     "@fusectore/atproto-pds": "workspace:^",
     "@opentelemetry/instrumentation": "^0.45.0",
     "dd-trace": "^4.18.0",
-    "express-prom-bundle": "^8.0.0",
-    "opentelemetry-plugin-better-sqlite3": "^1.1.0",
-    "prom-client": "^15.1.3"
+    "opentelemetry-plugin-better-sqlite3": "^1.1.0"
   }
 }
